--- a/css/main.css
+++ b/css/main.css
@@ -1,48 +1,77 @@
 /*
 ==========================================================================================
-                                HEADER
+                                        HEADER
 ==========================================================================================
 */
 
-.body {
-    background-color: #ffffff;
+body {
+    padding: 0px;
+    margin: 0px;
+    overflow-y: hidden;
 }
-
-.navbar {
-    
-}
-/*
-==========================================================================================
-                                ASIDE
-==========================================================================================
-*/
-
 
 
 /*
 ==========================================================================================
-                                CONTENT SECTION
+                                        KIRI
 ==========================================================================================
 */
 
-.section-1 {
-    
+#kiri {
+    background-color: #252729;
+    height: 100vh;
+    width: 30%;
+    float: left;
+    /*    padding: 10px;*/
 }
 
-.section-2 {
-    
+.logo {
+    width: 100px;
+    height: 100px;
 }
 
-.section-3 {
-    
+.judul {
+    font-size: 40px;
+    font-family: "Code Bold", "Roboto", Serif;
+    font-weight: 100;
+    color: #C59C2D;
+    padding: 0;
+    margin-bottom: 0;
 }
+
+.subjudul {
+    margin: 0;
+    font-size: 1.1em;
+    font-weight: 100;
+    color: #ffffff;
+    font-family: "Roboto";
+}
+
+.navigation {
+    vertical-align: bottom;
+    margin-top: 300px;
+}
+
+.navigation p {
+    color: white;
+    font-size: 1.3em;
+}
+
 
 /*
 ==========================================================================================
-                                FOOTER SECTION
+                                KANAN (CONTENT SECTION)
 ==========================================================================================
 */
 
-.footer-section {
-    
+#kanan {
+    width: 70%;
+    height: 100vh;
+    float: right;
 }
+
+.section-1 {}
+
+.section-2 {}
+
+.section-3 {}
