--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,6 @@ body {
     height: 100vh;
     width: 30%;
     float: left;
-    /*    padding: 10px;*/
 }
 
 .logo {
@@ -48,13 +47,29 @@ body {
 }
 
 .navigation {
-    vertical-align: bottom;
+    vertical-align: bottom !important;
     margin-top: 300px;
 }
 
 .navigation p {
     color: white;
     font-size: 1.3em;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+td {
+    width: 120px;
+}
+
+td a p {
+    font-family: "Roboto";
 }
 
 
@@ -64,14 +79,14 @@ body {
 ==========================================================================================
 */
 
+.iframe {
+    border: none;
+    height: 100%;
+    width: 100%
+}
+
 #kanan {
     width: 70%;
     height: 100vh;
     float: right;
 }
-
-.section-1 {}
-
-.section-2 {}
-
-.section-3 {}
