--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ body {
 .judul {
     font-size: 40px;
     font-family: "Code Bold", "Roboto", Serif;
-    font-weight: 100;
+    font-weight: 500;
     color: #C59C2D;
     padding: 0;
     margin-bottom: 0;
@@ -60,8 +60,9 @@ a {
     text-decoration: none;
 }
 
-a:hover {
+a:hover  {
     text-decoration: underline;
+    text-decoration-color: #663399;
 }
 
 td {
