img profile hover fixed

--- a/css/konten.css
+++ b/css/konten.css
@@ -70,3 +70,12 @@ body {
     width: auto;
     height: auto;
 }
+
+.img-profile {
+    
+    opacity: 0.5;
+}
+.img-profile:hover {
+    
+    opacity: 1;
+}
