countdown timer fixed

--- a/css/konten.css
+++ b/css/konten.css
@@ -63,10 +63,12 @@ body {
 }
 
 .logo {
+/*
     margin-left: 170px;
     margin-right: auto;
     width: auto;
     height: auto;
+*/
 }
 
 .img-profile {
